--- a/style/index.css
+++ b/style/index.css
@@ -5,6 +5,10 @@
 	--pink-color: #f87652;
 	--secondary-color: #bbbbbb;
     --bg-color-of-lists-in-skills-section: #81818180;
+
+	--bg-color-for-form-inputs: #ffffff24;
+	--border-color-for-form-inputs: #c4c4c44a;
+
 }
 *{
 	font-family: 'Poppins', sans-serif;
@@ -332,3 +336,150 @@ h5 a:hover{
     background-color: var(--pink-color)!important;
     color: transparent;
    }
+
+   /* Portfolio Section */
+   .portfolio_section{
+	background: #282a39;
+	padding: 170px 0;
+   }
+   .portfolio_section .nav-tabs{
+	border: none;
+	width: 32%;
+	text-align: center;
+   }
+   .portfolio_section .nav-tabs .nav-link.active{
+	border: none;
+	color: white;
+	border-bottom: 2px solid var(--pink-color) !important;
+	background: transparent;
+   }
+   .portfolio_section .nav-tabs .nav-link.active:hover{
+	border-bottom: 2px solid var(--pink-color) !important;
+   }
+   .portfolio_section .nav-tabs .nav-item.show .nav-link{
+	font-weight: 400;
+	font-size: 14px;
+	background: transparent !important;
+   }
+   .portfolio_section .nav-tabs .nav-link:hover{
+	border: none;
+   }
+   .portfolio_section .tab-content .card img{
+	border: 2px solid white;
+   }
+
+   /* Contact Section */
+   .contact_section{
+	background: #282a39;
+	padding-bottom: 170px;
+   }
+   .contact_section .heading{
+	font-weight: 600;
+	font-size: 50px;
+   }
+   .contact_section hr{
+	border: 0.5px solid var(--pink-color);
+	width: 6rem;
+	margin: 12px 0;
+   }
+   .contact_section .txt{
+	color: var(--secondary-color);
+	font-size: 13px;
+   }
+   .contact_section form .form-control{
+	background: var(--bg-color-for-form-inputs);
+	border: 2px solid var(--bg-color-for-form-inputs);
+	border-radius: 0px;
+	color: #fff;
+   }
+   .contact_section form button{
+	background: var(--pink-color);
+	border: 2px solid var(--pink-color);
+	color: white;
+	width: 100px;
+	font-size: 15px;
+   }
+   .contact_section form button:hover{
+	animation: swing;
+	animation-duration: 0.5s;
+   }
+   .contact_section ul li{
+	color: white;
+	font-size: 15px;
+	margin-bottom: 12px;
+   }
+   .contact_section ul li .fa{
+		color: var(--pink-color);
+   }
+
+   @media (max-width:991px) and (min-width:768px) {
+	.contact_section.heading{
+		font-size: 42px;
+	}
+   }
+
+   /* Footer Section */
+   .footer-area{
+	background: #212A39;
+	border-top: 2px solid var(--bg-color-for-form-inputs);
+	padding: 40px 0;
+   }
+   .footer-area .navbar-brand{
+	font-size: 23px;
+   }
+   .footer-area p{
+	margin-top: 13px;
+	color: var(--secondary-color);
+	font-size: 12px;
+   }
+   .footer-area .logo-area .fa{
+	color: var(--pink-color);
+	font-size: 17px !important;
+	border: 2px solid var(--pink-color);
+	padding: 10px;
+	height: 40px;
+	width: 40px;
+	display: inline-block;
+	text-align: center;
+	justify-content: center;
+	border-radius: 100%;
+	margin-right: 5px;
+   }
+   .footer-area .logo-area .fa:hover{
+		animation: swing;
+		animation-duration: 05s;
+		background: white;
+	}
+	.footer-area .row .column .heading{
+		font-weight: 400 !important;
+		font-size: 21px;
+		color: white;
+	}
+	.footer-area .list-group .list-group-item{
+		margin: -3px 0;
+		color: white;
+		transition: 0.5s !important;
+	}
+	.footer-area .list-group .list-group-item:hover i{
+		padding-right: 10px;
+	}
+	.footer-area .list-group .list-group-item i{
+		font-size: 10px;
+		color: var(--pink-color);
+		transition: 0.5s;
+	}
+
+	@media (max-width:767px) and (min-width:500px) {
+		.footer-area .links{
+			margin-bottom: 30px;
+		}
+		.footer-area .row .column .heading{
+			font-size: 17px !important;
+		}
+		.portfolio_section .list-group{
+			margin-bottom: 30px;
+		}
+		.portfolio_section .list-group .list-group-item{
+			font-size: 13px;
+		}
+	}
