--- a/style/index.css
+++ b/style/index.css
@@ -12,6 +12,7 @@
 }
 *{
 	font-family: 'Poppins', sans-serif;
+	scroll-behavior: smooth;
 }
 body{
 	background-color: var(--background-color) !important;
