--- a/style/index.css
+++ b/style/index.css
@@ -76,6 +76,13 @@ canvas.particles-js-canvas-el{
 	box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
   }
 
+.navbar-brand img { 
+    width: 60px;
+    height: auto; 
+    display: inline-block;
+    vertical-align: middle; 
+}
+
 .nav_section .navbar-brand span{
  	color: var(--pink-color);	
  } 
